# django-template

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
core/: settings.py  urls.py
core/components/: authentication.py  database.py  logging.py  templates.py
static/styles/: normalize.css  vars.css
templates/: base.html  home.html
users/: models.py  views.py
users/migrations/: 0001_initial.py
