[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["dyussenov <dyusenov.aset.arm@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
django = "^5.0.3"
django-widget-tweaks = "^1.5.0"
django-split-settings = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
